creando una vista de usuario

--- a/StimSD/src/main/webapp/hello.xhtml
+++ b/StimSD/src/main/webapp/hello.xhtml
@@ -20,12 +20,11 @@
         <h:outputLabel for="password" value="Clave:" />
         <p:password value="#{hello.contrasenia}" id="password" required="true"
            label="password" />
-          
-        <f:facet name="footer">
-          <p:commandButton id="loginButton" value="Login"
+          <p:commandButton value="registro" id="registro" action="registro"></p:commandButton>
+           <p:commandButton id="loginButton" value="Login"
              actionListener="#{hello.muestra}" update=":R"
              onclick="PF('statusDialog').show()"  oncomplete="PF('statusDialog').hide()"/>
-        </f:facet>
+      
       </h:panelGrid>
     </p:panel>
   </h:form>
