insertar en el registro

--- a/StimSD/src/main/webapp/hello.xhtml
+++ b/StimSD/src/main/webapp/hello.xhtml
@@ -47,6 +47,8 @@
           <p:commandButton id="loginButton" value="Login"
              actionListener="#{hello.muestra}" update=":R"
              onclick="PF('statusDialog').show()"  oncomplete="PF('statusDialog').hide()" class="boton_personalizado"/>
+       	<p:commandButton id="submit" value="Registro" action="registro" class="boton_personalizado2"></p:commandButton>	 
+       	<p:commandButton id="reset" value="clear" type="reset" class="boton_personalizado2"></p:commandButton>
        </div>
      </div>
     
