--- a/StimSD/src/main/webapp/index.xhtml
+++ b/StimSD/src/main/webapp/index.xhtml
@@ -14,7 +14,21 @@
 	
 	<link rel="stylesheet" href="css/font-awesome.css" />
 	<link href="css/style.css" rel='stylesheet' type='text/css' />
-		
+	<link rel="stylesheet" href="css/font.css" type="text/css"/>
+	
+<!-- //font-awesome icons -->
+<script src="js/jquery2.0.3.min.js"></script>
+<script src="js/modernizr.js"></script>
+<script src="js/jquery.cookie.js"></script>
+<script src="js/screenfull.js"></script>
+<!-- charts -->
+<script src="js/raphael-min.js"></script>
+<script src="js/morris.js"></script>
+
+<!-- //charts -->
+<!--skycons-icons-->
+<script src="js/skycons.js"></script>
+<!--//skycons-icons-->		
 	
 </h:head>
 <h:body class="dashboard-page" >
