--- a/StimSD/src/main/webapp/registro.xhtml
+++ b/StimSD/src/main/webapp/registro.xhtml
@@ -63,7 +63,7 @@
                <h:outputLabel for="estado" value="Estado: " />
               	<h:selectOneMenu  id="estado" style="width:95%;" >
               			<f:selectItem itemLabel="Seleccione uno" itemValue=""/>
-						<f:selectItem itemLabel="carro" itemValue="carro"/>
+						<f:selectItem  value="#{estado.listaestados}"/>
 				</h:selectOneMenu>
               	</div> 
               	
