cambios hospitales insertar

--- a/StimSD/src/main/webapp/login.xhtml
+++ b/StimSD/src/main/webapp/login.xhtml
@@ -25,7 +25,7 @@
 <!-- FORMULARIO PARA INGRESAR USUARIO Y CONTRASEÑA -->
   <h:form>
 <div class="agile-signup">
-     <div class="content2">
+     <div class="content2l">
      		<div class="grids-heading  signup-heading">
 					<h2>Login</h2>
 			</div>
