--- a/StimSD/src/main/webapp/hospitales.xhtml
+++ b/StimSD/src/main/webapp/hospitales.xhtml
@@ -133,28 +133,35 @@
 								 <h:panelGrid columns="2" style="margin-bottom:10px" cellpadding="5"  styleClass="ui-panelgrid-blank ui-fluid" layout="grid">
 						   			<h:outputLabel  for ="hospital" value="Hospital: " />
               						<p:inputText  id="hospital"  style="width:100%;" label="nom_hospital" placeholder="Ingrese hospital" value="#{hospitalView.hospital}">
+              						<p:ajax event="keyup" listener="#{hospitalView.guarda_actualiza_datos}"></p:ajax>
               						</p:inputText>
 						   			<h:outputLabel for="calle" value="Calle: " />
               						<p:inputText  id="calle"  style="width:100%;" label="ca_hospital" placeholder="Ingrese calle" value="#{hospitalView.calle}">
+              						<p:ajax event="keyup" listener="#{hospitalView.guarda_actualiza_datos}"></p:ajax>
               						</p:inputText>
               						<h:outputLabel for="numero" value="Numero: " />
               						<p:inputText  id="numero"  style="width:100%;" label="nu_hospital" placeholder="Ingrese numero" value="#{hospitalView.numero}">
+              						<p:ajax event="keyup" listener="#{hospitalView.guarda_actualiza_datos}"></p:ajax>
               						<p:keyFilter regEx="/[\d\-\.]/"/>
               						</p:inputText>
               						<h:outputLabel for="colonia" value="Colonia: " />
               						<p:inputText  id="colonia"  style="width:100%;" label="co_hospital" placeholder="Ingrese colonia" value="#{hospitalView.colonia}">
+              						<p:ajax event="keyup" listener="#{hospitalView.guarda_actualiza_datos}"></p:ajax>
               						</p:inputText>
               						<h:outputLabel for="codigoPostal" value="Codigo Postal: " />
               						<p:inputText  id="codigoPostal"  style="width:100%;" label="cp_hospital" placeholder="Ingrese CP" value="#{hospitalView.codigoPostal}">
+              						<p:ajax event="keyup" listener="#{hospitalView.guarda_actualiza_datos}"></p:ajax>
               						<p:keyFilter regEx="/[\d\-\.]/"/>
               						</p:inputText>
               						<h:outputLabel for="estado" value="Estado: " />
                   						<h:selectOneMenu  id="estado" style="width:95%;"  value="#{hospitalView.idEstado}">
                     					<f:selectItem itemLabel="seleccione uno" itemValue="" />
             							<f:selectItems value="#{hospitalView.estados}" />
+            							<p:ajax event="keyup" listener="#{hospitalView.guarda_actualiza_datos}"></p:ajax>
           							</h:selectOneMenu>
           							<h:outputLabel  for= "telefono" value="Telefono: " />
               						<p:inputText  id="telefono"  style="width:100%;" label="tel_hospital" placeholder="Ingrese telefono">
+              						<p:ajax event="keyup" listener="#{hospitalView.guarda_actualiza_datos}"></p:ajax>
               						</p:inputText>   
               					</h:panelGrid>
 							
