--- a/StimSD/src/main/webapp/registro.xhtml
+++ b/StimSD/src/main/webapp/registro.xhtml
@@ -160,7 +160,7 @@
            
  			<p:commandButton id="submit" value="login" actionListener="#{registroUsuario.ini_login}" 
             onclick="PF('statusDialog').show()"  oncomplete="PF('statusDialog').hide()" ></p:commandButton>  
- 			<p:commandButton  value="ok"  actionListener="#{registroUsuario.registroUsuario}" 
+ 			<p:commandButton  value="ok"  actionListener="#{registroUsuario.registroUsuario_primero}" 
             onclick="PF('statusDialog').show()"  oncomplete="PF('statusDialog').hide()" ></p:commandButton>  				 	
             </p:panel>
         </p:tab>    
