--- a/StimSD/src/main/webapp/expediente.xhtml
+++ b/StimSD/src/main/webapp/expediente.xhtml
@@ -92,8 +92,7 @@
 						paginatorTemplate="{PageLinks} {RowsPerPageDropdown}"
 						rowsPerPageTemplate="5,10,15" 
 						paginatorPosition="bottom" 
-						var="hos"  reflow="true" selectionMode="single"  
-						  >
+						var="ex"  reflow="true" selectionMode="single">
 	              						
 	              			<p:column headerText="Expediente">
 								<h:outputText  />
