--- a/StimSD/src/main/webapp/Administrador.xhtml
+++ b/StimSD/src/main/webapp/Administrador.xhtml
@@ -1,85 +1,18 @@
-<ui:composition template="index.xhtml"
+<ui:composition template="menu.xhtml"
 	xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:p="http://primefaces.org/ui">
-	
-	<ui:define name="menu_inicio">
-		<a href="Administrador.xhtml">
-		<i class="fa fa-home nav_icon"></i>
-			<span class="nav-text">
-					Inicio
-			</span>
-		</a>
-	 </ui:define>
-	
-	 <ui:define name="menu_configuracion">
-	 	<a href="javascript:;">
-				<i class="fa fa-cogs" aria-hidden="true"></i>
-		<span class="nav-text">
-			 Configuración
-		</span>
-			<i class="icon-angle-right"></i><i class="icon-angle-down"></i>
-			</a>
-			<ul>
-				<li>
-					<a class="subnav-text" href="buttons.html">
-						Generar Bioponencial 
-					</a>
-				</li>
-			</ul>
-	 </ui:define>
-	 
-	  <ui:define name="menu_usuario">
-	  		 	<a href="javascript:;">
-				<i class="fa fa-check-square-o nav_icon"></i>
-				<span class="nav-text">
-				Usuarios
-				</span>
-				<i class="icon-angle-right"></i><i class="icon-angle-down"></i>
-				</a>
-				<ul>
-					<li>
-						<a class="subnav-text" href="">Tecnico</a>
-					</li>
-					<li>
-						<a class="subnav-text" href="">Paciente</a>
-					</li>
-				</ul>
-	  </ui:define>
-	  
-	  <ui:define name="menu_historico">
-	  			<a href="javascript:;">
-					<i class="fa fa-file-text-o nav_icon"></i>
-						<span class="nav-text">Historico</span>
-					<i class="icon-angle-right"></i><i class="icon-angle-down"></i>
-				</a>
-				<ul>
-					<li>
-						<a class="subnav-text" href="">Estimuladores</a>
-					</li>
-					<li>
-						<a class="subnav-text" href="">Pacientes</a>
-					</li>
-				</ul>
-	  </ui:define>
-	  <ui:define name="dock">
-	 <p:stack icon="/resources/images/stack.png" expanded="true"  position="left">
-    <p:menuitem value="Home" icon="/resources/images/home3.jpeg" url="#"/>
-    <p:menuitem value="Music" icon="/resources/images/music.png" url="#"/>
-    <p:menuitem value="Video" icon="/resources/images/video.png" url="#"/>
-    <p:menuitem value="Email" icon="/resources/images/email.png" url="#"/>
-    <p:menuitem value="Portfolio" icon="/resources/images/portfolio.png" url="#"/>
-</p:stack>
-	  </ui:define>
-	 
-	 	<ui:define name="content"> 
-	 		<div style="text-align: center">
-	 			<iframe src="VistaOperador.xhtml" height="480" width="900"></iframe> 
-	 	  </div>
-
-	 	</ui:define>
-	
-
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:b="http://bootsfaces.net/ui">
+<ui:define name="linsk_b"></ui:define>
+<ui:define name="muestra">
+<b:well>
+	<h:form>
+<b:panelGrid colSpans="5,7">
+ <p:barcode value="1234567890" type="qr" id="qr2" style="width:90px;height:90px;"/>
+</b:panelGrid>
+	</h:form>
+	</b:well>
+</ui:define>
 </ui:composition>
