--- a/StimSD/src/main/webapp/menu.xhtml
+++ b/StimSD/src/main/webapp/menu.xhtml
@@ -4,7 +4,8 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui"
-	xmlns:c="http://java.sun.com/jsp/jstl/core">
+	xmlns:c="http://java.sun.com/jsp/jstl/core"
+	xmlns:b="http://bootsfaces.net/ui">
 
 <h:head>
 <title>Login</title>
@@ -15,26 +16,40 @@
 	<link rel="stylesheet" href="css/font-awesome.css" />
 	<link href="css/style.css" rel='stylesheet' type='text/css' />
 
+	<b:tabLinks  look="primary" title="Stim SD" icon="globe" iconAlign="right">
+	    <b:navLink href="VistaOnda.xhtml" value="Potenciales"/>
+	    <b:navLink href="TipoCuenta.xhtml" value="Usuarios"/>
+	    <b:navLink href="hospitales.xhtml" value="Hospital"/>
+	   	<b:navLink href="estimuladores.xhtml" value="Equipos"/>
+	   	<b:navLink href="paciente.xhtml" value="Paciente"/>
+	   	
+	   	<h:form styleClass="navbar-form navbar-right" ></h:form>
+	   		<h:form styleClass="navbar-form navbar-right" >
+	     	<b:commandButton look="danger" value = "Cerrar " actionListener="#{gestiondeSeccionView.cerrarSesionUsuario}"  />
+	    </h:form>
+	    
+	    <ui:insert name = "linsk_b"> </ui:insert>
+
+	</b:tabLinks>
+
+<b:messages />
 <div style="text-align: center">
  <ui:insert name = "muestra"> NO CONTENT</ui:insert>
 </div>
   </h:head>
   
+
+<!-- <p:sidebar widgetVar="sidebar1" baseZIndex="10000">
+    <h1 style="font-weight:normal">Left Sidebar</h1>
   
+</p:sidebar>-->
+
 <style type="text/css">
     .ui-stack {
         z-index: 1000;
     }
 </style>
-	<h:form>
-<p:dock position="bottom">
-<p:menuitem value="Cerrar" icon="/images/apagado.jpeg" action="#{gestiondeSeccionView.cerrarSesionUsuario}"/>
-<p:menuitem value="Señales" icon="/images/Onda.jpeg" url="VistaOnda.xhtml"/>
-<p:menuitem value="Usuarios" icon="/images/Usuario.jpg" url="adminusuario.xhtml"/>
-<p:menuitem value="Inicio" icon="/images/home.png" url="Administrador.xhtml"/>
-    <p:menuitem value="Estimuladores" icon="/images/portfolio.png" url="estimuladores.xhtml"/>
-</p:dock>
-</h:form>
+
 <!-- 
 <p:stack icon="/images/stack.png" expanded="true">
  
