--- a/StimSD/src/main/webapp/TipoCuentas.xhtml
+++ b/StimSD/src/main/webapp/TipoCuentas.xhtml
@@ -9,11 +9,12 @@
 	
 <h:head>
 <b:tabLinks  look="primary" title="Stim SD" icon="globe" iconAlign="right">
-	    <b:navLink href="VistaOnda.xhtml" value="Potenciales"/>
-	    <b:navLink href="TipoCuenta.xhtml" value="Usuarios"/>
+	    <b:navLink href="VistaOndas.xhtml" value="Potenciales"/>
+	    <b:navLink href="TipoCuentas.xhtml" value="Usuarios"/>
 	    <b:navLink href="hospitales.xhtml" value="Hospital"/>
-	   	<b:navLink href="estimuladores.xhtml" value="Equipos"/>
-	   	<b:navLink href="paciente.xhtml" value="Paciente"/>
+	   	<b:navLink href="estimulador.xhtml" value="Equipos"/>
+	   	<b:navLink href="pacientes.xhtml" value="Paciente"/>
+	   	<b:navLink href="expedientes.xhtml" value="Consulta"/>
 	   	
 	   	<h:form styleClass="navbar-form navbar-right" ></h:form>
 	   		<h:form styleClass="navbar-form navbar-right" >
