--- a/StimSD/src/main/webapp/estimulador.xhtml
+++ b/StimSD/src/main/webapp/estimulador.xhtml
@@ -9,11 +9,12 @@
 	
 <h:head>
 <b:tabLinks  look="primary" title="Stim SD" icon="globe" iconAlign="right">
-	    <b:navLink href="VistaOnda.xhtml" value="Potenciales"/>
-	    <b:navLink href="TipoCuenta.xhtml" value="Usuarios"/>
+	    <b:navLink href="VistaOndas.xhtml" value="Potenciales"/>
+	    <b:navLink href="TipoCuentas.xhtml" value="Usuarios"/>
 	    <b:navLink href="hospitales.xhtml" value="Hospital"/>
-	   	<b:navLink href="estimuladores.xhtml" value="Equipos"/>
-	   	<b:navLink href="paciente.xhtml" value="Paciente"/>
+	   	<b:navLink href="estimulador.xhtml" value="Equipos"/>
+	   	<b:navLink href="pacientes.xhtml" value="Paciente"/>
+	   	<b:navLink href="expedientes.xhtml" value="Consulta"/>
 	   	
 	   	<h:form styleClass="navbar-form navbar-right" ></h:form>
 	   		<h:form styleClass="navbar-form navbar-right" >
@@ -36,7 +37,7 @@
 <div style="text-align: center">
  <br /> <br />
 </div>
-	<title>Equipo</title>
+	<title>Consulta</title>
 <style type="text/css">
     .alineacion{
         margin:auto;
@@ -610,7 +611,8 @@
 								<h:outputLabel id = "hist_equipo1" value="#{controlestimuladores.selecion_esth.estado}" />
 							</b:row>
 							<b:row style="margin-bottom:10px">
-		 	 	 					<p:calendar id="fecha_m" class = "texto_centro" value="#{controlestimuladores.fecha1}" showOn="button"  placeholder="Fecha"/>
+		 	 	 					<b:dateTimePicker  id="fechahora"/>
+		 	 	 					<p:ajax event="change" listener="" update="usuarios"></p:ajax>
 		 	 	 			</b:row>
 							<b:row  style="margin-bottom:10px" >
 								<p:dataTable id = "mantenimientosh"  paginator="true" rows="5" 
